2003-08-02 Jim Garlick <garlick@llnl.gov>

    * src/device.c: print useful error message in process_setplugname if
    node does not exist.

    * src/client.c: device query output now lists nodes only if they
    have been mapped to plug names.

2003-08-01 Jim Garlick <garlick@llnl.gov>

    * src/device.h: decrease max buffer size from 1M to 8K.

    * src/client.c: sort hostlists returned by device query

2003-07-29 Jim Garlick <garlick@llnl.gov>

    * etc/phantom-llnl.dev,etc/phantom.dev: reduced timeout 20s->5s.

    * Makefile: distribute phantom-llnl.dev.

2003-07-23 Jim Garlick <garlick@llnl.gov>

    * etc/ibmrsa.dev: Tweaked for new firmware release.

    * etc/ibmrsa-smc.dev: New.  Config for RSA connected to main board via
    system management connector.

    * etc/baytech-rpc3-nc.dev: Make it look more like the rpc28 config.

2003-07-21 Jim Garlick <garlick@llnl.gov>

    * : minor code cleanup

2003-07-16 Jim Garlick <garlick@llnl.gov>

    * etc/ipmi.dev: New.

2003-07-15 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc28-nc.dev, etc/baytech-rpc3-nc.dev: minor fine tuning
    based on IGS cluster experience with rpc28's.

    * src/device_pipe.[ch], src/pty.[ch]: New.

    * src/parse.y: Support for "pipe device".

    * etc/phantom-llnl.dev: New - phantom firmware with llnl mods.

2003-07-09 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc28-nc.dev, etc/baytech-rpc3-nc.dev, etc/baytech.dev:
    Make prompt recognition less restrictive.

2003-07-01 Jim Garlick <garlick@llnl.gov>

    * etc/phantom.dev: Reflect changes in 3.0.4b firmware.

2003-06-23 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc3-nc.dev: New for ilx RPC3 "NC" model with new/different 
    firmware than expected in baytech.dev.

    * etc/baytech-rpc28-nc.dev: Renamed from baytech-rpc28.dev to reflect
    that this is the same "NC" firmware as above (but with 28 ports).

    * README, Makefile, powerman.spec: Cleanup.

2003-06-06 Jim Garlick <garlick@llnl.gov>
